--- a/NurseryPolije/app/src/main/AndroidManifest.xml
+++ b/NurseryPolije/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         <activity android:name=".LoginActivity" />
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name">
+            android:label="Nursery Polije">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
