--- a/NurseryPolije/app/src/main/AndroidManifest.xml
+++ b/NurseryPolije/app/src/main/AndroidManifest.xml
@@ -13,6 +13,8 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
         <activity android:name=".LoginActivity" />
+        <activity android:name=".RegisterActivity"/>
+
         <activity
             android:name=".MainActivity"
             android:label="Nursery Polije">
