--- a/NurseryPolije/app/src/main/AndroidManifest.xml
+++ b/NurseryPolije/app/src/main/AndroidManifest.xml
@@ -12,9 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
+        <activity android:name=".SettingProfileActivity"></activity>
         <activity android:name=".LoginActivity" />
-        <activity android:name=".RegisterActivity"/>
-
+        <activity android:name=".RegisterActivity" />
         <activity
             android:name=".MainActivity"
             android:label="Nursery Polije">
