--- a/NurseryPolije/app/build.gradle
+++ b/NurseryPolije/app/build.gradle
@@ -32,4 +32,14 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.android.volley:volley:1.1.1'
     implementation "androidx.cardview:cardview:1.0.0"
+    implementation 'com.mikhaellopez:circularimageview:3.2.0'
+
+
+    implementation ("com.github.bumptech.glide:glide:4.11.0") {
+        exclude group: "com.android.support"
+    }
+    //noinspection GradleCompatible
+    implementation "com.android.support:support-fragment:28.1.0"
+
+    implementation 'com.jakewharton:butterknife:8.8.1'
 }
