--- a/NurseryPolije/app/build.gradle
+++ b/NurseryPolije/app/build.gradle
@@ -41,5 +41,7 @@ dependencies {
     //noinspection GradleCompatible
     implementation "com.android.support:support-fragment:28.1.0"
 
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
     implementation 'com.jakewharton:butterknife:8.8.1'
 }
