--- a/NurseryPolije/app/src/main/AndroidManifest.xml
+++ b/NurseryPolije/app/src/main/AndroidManifest.xml
@@ -28,13 +28,13 @@
              sign the APK for publishing.
              You can define the keys for the debug and release targets in src/debug/ and src/release/.
         -->
-        <meta-data
-            android:name="com.google.android.geo.API_KEY"
-            android:value="@string/google_maps_key" />
+<!--        <meta-data-->
+<!--            android:name="com.google.android.geo.API_KEY"-->
+<!--            android:value="@string/google_maps_key" />-->
 
-        <activity
-            android:name=".PetaLokasi"
-            android:label="@string/title_activity_peta_lokasi"></activity>
+<!--        <activity-->
+<!--            android:name=".PetaLokasi"-->
+<!--            android:label="@string/title_activity_peta_lokasi"></activity>-->
         <activity android:name=".UbahPassword" />
         <activity android:name=".SettingProfileActivity" />
         <activity android:name=".LoginActivity" />
