--- a/NurseryPolije/app/src/main/AndroidManifest.xml
+++ b/NurseryPolije/app/src/main/AndroidManifest.xml
@@ -12,6 +12,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
+        <activity
+            android:name=".StartedActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/title_activity_started"
+            android:theme="@style/FullscreenTheme"></activity>
         <activity android:name=".LoginActivity" />
         <activity
             android:name=".MainActivity"
