--- a/NurseryPolije/app/src/main/AndroidManifest.xml
+++ b/NurseryPolije/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -15,7 +15,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".DetailTagihan"></activity>
+        <activity android:name=".FrequentlyAskQuestion"></activity>
+        <activity android:name=".DetailTagihan" />
         <activity android:name=".TagihanActivity" />
         <activity android:name=".Kritik" />
         <activity android:name=".KeranjangActivity" />
