--- a/NurseryPolije/app/src/main/AndroidManifest.xml
+++ b/NurseryPolije/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".FrequentlyAskQuestion"></activity>
+        <activity android:name=".DikemasActivity"></activity>
+        <activity android:name=".FrequentlyAskQuestion" />
         <activity android:name=".DetailTagihan" />
         <activity android:name=".TagihanActivity" />
         <activity android:name=".Kritik" />
